--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/vkd-w/vkd-w.github.io/issues"
+    "url": "https://github.com/vkd-w/vkd-w.github.io/public"
   },
   "homepage": "https://github.com/vkd-w/vkd-w.github.io#readme",
   "dependencies": {
